# vk-mem-alloc-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  rustfmt.toml  ⬆️ Update ash to 0.38
src/: enums.rs  functions.rs  lib.rs  structs.rs  types.rs  utils.rs
vk-mem-alloc-sys/: Cargo.toml  README.md  build.rs
vk-mem-alloc-sys/src/: lib.rs
