[package]
name = "vk-mem-alloc"
version = "0.1.0"
edition = "2021"

authors = [ "Lorenz Klaus <beastle9end@outlook.de>", "Marlon Klaus <marlon.klaus@icloud.com>" ]
description = "A very lightweight wrapper around the Vulkan Memory Allocator"
homepage = "https://github.com/projectkml/vk-mem-alloc-rs"
repository = "https://github.com/projectkml/vk-mem-alloc-rs"
documentation = "https://docs.rs/vk-mem-alloc"
readme = "README.md"
keywords = [ "vulkan", "vk", "ash", "memory", "allocator" ]
categories = [ "api-bindings", "rendering", "rendering::engine", "rendering::graphics-api" ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "gen/bindings.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/VulkanMemoryAllocator/include/vk_mem_alloc.h",
    "vendor/Vulkan-Headers/include/vk_platform.h",
    "vendor/Vulkan-Headers/include/vulkan_core.h",
    "vendor/Vulkan-Headers/include/vulkan.h",
    "wrapper/vma_lib.cpp",
]

[dependencies]
ash = ">= 0.37.0"
bitflags = "1.3.2"
libc = "0.2.129"

[build-dependencies]
cc = "1.0.73"

[build-dependencies.bindgen]
version = "0.60.1"
optional = true

[features]
default = []
generate_bindings = [ "bindgen" ]
link_vulkan = []
recording = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1