[package]
name = "vk-mem-alloc"
version = "0.2.0"
edition = "2021"

authors = [ "Lorenz Klaus <beastle9end@outlook.de>", "Marlon Klaus <marlon.klaus@icloud.com>" ]
description = "A very lightweight wrapper around the Vulkan Memory Allocator"
homepage = "https://github.com/projectkml/vk-mem-alloc-rs"
repository = "https://github.com/projectkml/vk-mem-alloc-rs"
documentation = "https://docs.rs/vk-mem-alloc"
readme = "README.md"
keywords = [ "vulkan", "vk", "ash", "memory", "allocator" ]
categories = [ "api-bindings", "rendering", "rendering::engine", "rendering::graphics-api" ]
license = "MIT/Apache-2.0"
include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]
ash = { git = "https://github.com/ProjectKML/ash" }
bitflags = "2.0.0-rc.1"
libc = "0.2.129"
vk-mem-alloc-sys = { path = "vk-mem-alloc-sys" }
