[package]
name = "vk-mem-alloc-sys"
version = "0.2.0"
edition = "2021"

authors = [ "Lorenz Klaus <beastle9end@outlook.de>", "Marlon Klaus <marlon.klaus@icloud.com>" ]
description = "A very lightweight wrapper around the Vulkan Memory Allocator"
homepage = "https://github.com/projectkml/vk-mem-alloc-rs"
repository = "https://github.com/projectkml/vk-mem-alloc-rs"
documentation = "https://docs.rs/vk-mem-alloc"
readme = "README.md"
keywords = [ "vulkan", "vk", "ash", "memory", "allocator" ]
categories = [ "api-bindings", "rendering", "rendering::engine", "rendering::graphics-api" ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/VulkanMemoryAllocator/include/vk_mem_alloc.h",
    "vendor/Vulkan-Headers/include/*",
    "wrapper/vk_mem_alloc.cpp"
]

[dependencies]
ash = { git = "https://github.com/ProjectKML/ash" }

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.78"

[profile.release]
opt-level = 3
codegen-units = 1

lto = true