[package]
name = "vk-mem-alloc-sys"
version = "0.2.0"
edition = "2021"

authors = [ "Lorenz Klaus <beastle9end@outlook.de>", "Marlon Klaus <marlon.klaus@icloud.com>" ]
description = "A very lightweight wrapper around the Vulkan Memory Allocator"
homepage = "https://github.com/projectkml/vk-mem-alloc-rs"
repository = "https://github.com/projectkml/vk-mem-alloc-rs"
documentation = "https://docs.rs/vk-mem-alloc"
readme = "README.md"
keywords = [ "vulkan", "vk", "ash", "memory", "allocator" ]
categories = [ "api-bindings", "rendering", "rendering::engine", "rendering::graphics-api" ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/VulkanMemoryAllocator/include/vk_mem_alloc.h",
    "vendor/Vulkan-Headers/include/*",
    "wrapper/vk_mem_alloc.cpp"
]

[dependencies]
ash = "0.38.0+1.3.281"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.90"

[features]
recording = []

[profile.release]
opt-level = 3
codegen-units = 1

lto = true